<resources>
    <string name="app_name">Gappa</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnSignIn">Sign In</string>
    <string name="hintEmailid">Email ID</string>
    <string name="hintPassword">Password</string>
    <string name="descImageView">Gappa Logo</string>
    <string name="registerHere_text">Dont have an Account? Register Here</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="hintUserId">User Name</string>
</resources>
