<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText"
        android:textColor="#9c27b0"
        android:hint="@string/hintEmailid"
        android:textColorHint="#9c27b0"
        android:textAlignment="center"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true">

    </EditText>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:textColor="#9c27b0"
        android:hint="@string/hintPassword"
        android:textColorHint="#9c27b0"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSignUp"
        android:id="@+id/button"
        android:background="#9c27b0"
        android:textColor="#e0e0e0"
        android:textSize="20sp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/gappa_text"
        android:contentDescription="@string/descImageView"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/editText2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText3"
        android:textColor="#9c27b0"
        android:hint="@string/hintUserId"
        android:textColorHint="#9c27b0"
        android:textAlignment="center"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
